# forward-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cert.pem  docx.md  key.pem
docs/: premise.md  progress.md
include/forward-engine/: abnormal.hpp  agent.hpp  http.hpp
include/forward-engine/abnormal/: deviant.hpp  network.hpp  protocol.hpp  security.hpp
include/forward-engine/agent/: adaptation.hpp  analysis.hpp  connection.hpp  distributor.hpp  frame.hpp  obscura.hpp  positive.hpp  reverse.hpp  session.hpp  worker.hpp
include/forward-engine/core/: agent.hpp  broker.hpp  configuration.hpp
include/forward-engine/http/: constants.hpp  deserialization.hpp  header.hpp  request.hpp  response.hpp  serialization.hpp
include/forward-engine/limit/: blacklist.hpp
include/forward-engine/log/: monitor.hpp
include/forward-engine/memory/: container.hpp  pointer.hpp
include/forward-engine/rule/: blacklist.hpp
src/: CMakeLists.txt  configuration.json  main.cpp
src/forward-engine/agent/: analysis.cpp  connection.cpp  distributor.cpp  frame.cpp  obscura.cpp  positive.cpp  reverse.cpp
src/forward-engine/http/: deserialization.cpp  header.cpp  request.cpp  response.cpp  serialization.cpp
src/forward-engine/limit/: blacklist.cpp
src/forward-engine/log/: monitor.cpp
test/: CMakeLists.txt  connection_test.cpp  header.cpp  log.cpp  obscura.cpp  request.cpp  session.cpp
